solved code area supports horizontal scrolling.

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -156,7 +156,8 @@
 	}
 
 	pre {
-        white-space: pre-wrap;
+        // white-space: pre-wrap;
+        overflow: auto;
 		-webkit-overflow-scrolling: touch;
 		font-family: _font(family-fixed);
 		font-size: 1.09em;
